test/neg/michel2.scala
class A() extends java.lang.Object() with java.util.Random() { }
